[package]
name = "print-maker"
version = "0.1.0"
description = "Created with Anchor"
repository = "https://github.com/smartcontractkit/solana-example"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "print_maker"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
